--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,5 +38,5 @@
 
 
 <footer class="footer">
-  <span class="text-muted"> SandsOfTime | No rights reserved.</span>
+  <span class="text-muted"> SandsOfTimes | No rights reserved.</span>
 </footer>
